# Dribbble

./: AUTHORS  CMakeLists.txt  README.md  meson.build
cmake/: FindGirCompiler.cmake  GObjectIntrospectionMacros.cmake  GResources.cmake  Translations.cmake  Uninstall.cmake  ValaPrecompile.cmake  ValaVersion.cmake
data/: application.css  com.github.lozanotux.dribbble.appdata.xml  com.github.lozanotux.dribbble.desktop  com.github.lozanotux.notify.appdata.xml  com.github.lozanotux.notify.desktop  gresources.xml  gschema.xml  stylesheet.css~
data/schemas/: CMakeLists.txt  org.dribbble.gschema.xml
debian/: changelog  control  copyright
src/: Application.vala  Constants.vala  Dribbble  Dribbble.vala  Dribbble.vala~  Player.vala  Player.vala~  estilos.css
src/Widgets/: Controls.vala  Controls.vala~  InformationView.vala  StatusBar.vala  StatusBar.vala~  WelcomeView.vala  WelcomeView.vala~
src/widgets/: InformationView.vala  MainWindow.vala
